--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<H1>ABOUT CORONA VIRUS </H1>
+<h1>ABOUT CORONA VIRUS </h1>
 <p>corona virus is very dangerous virus and it was come from the country china in the lab 
     i think because of bat in the fish market and they devasted everything it has came on NOVEMBER
     2019</p>
@@ -28,7 +28,7 @@
     your hand with hand wash and sanitize your house and be in social distancing</p>
 
     <h5>LOCKDOWNS IN INDIA BY P.M MR.NARENDRA MODI JI</h5>
-<P>The first lockdown was on 21st of march in 2020 and the guideline was
+    <p>The first lockdown was on 21st of march in 2020 and the guideline was: </p>
     1.don't go out of the house
     2.wear the mask if you go out
     3.wash your hands with hand wash or sanitizer
@@ -40,4 +40,6 @@
     
     <h5>BE SAFE BE HEALTHY AT HOME </h5>
 
+    </body>
+</html>
 
