--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h5>BE SAFE BE HEALTHY AT HOME </h5>
 
  
-
+<body>
 <p>/*calculate a result of 5 subject marks and check the result is pass or fail*/
 #include<stdio.h>
 int main()
