--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <h5>LOCKDOWNS IN INDIA BY P.M MR.NARENDRA MODI JI</h5>
     <p>The first lockdown was on 21st of march in 2020 and the guideline was: </p>
     <ol>
-        <li>1.don't go out of the house</li>
-        <li>2.wear the mask if you go out</li>
-        <li>3.wash your hands with hand wash or sanitizer</li>
-        <li>4.don't touch your hands in nose,eyes etc.</li>
-        <li>5.work from home to everyone </li>
-        <li> 6.schools and colleges are closed till vaccine will come </li>
-        <li> 7.all shops are closed only the general stores,dairy and medical shops are open 
+        <li>don't go out of the house</li>
+        <li>wear the mask if you go out</li>
+        <li>wash your hands with hand wash or sanitizer</li>
+        <li>don't touch your hands in nose,eyes etc.</li>
+        <li>work from home to everyone </li>
+        <li> schools and colleges are closed till vaccine will come </li>
+        <li> all shops are closed only the general stores,dairy and medical shops are open 
            the time are fixed for that</li>
     
     </ol>
